--- a/index.html
+++ b/index.html
@@ -1006,6 +1006,14 @@
                     </div>
                 </div>
         </div>
+
+<!-- NOVA área para outra imagem -->
+<div id="containerUpload" style="margin-top: 20px;">
+  <div id="imagensArea"></div>
+  <button id="addImageBtn" class="uploadarea">
+    Adicionar Imagem
+  </button>
+
     </section>
     </div>
 
